# pygeogram

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: pip.yml  wheels.yml
cmake/: get_cxx_flags.cmake
examples/: README.md  fluid-2d.ipynb  requirements.txt  transport-2d.ipynb  transport-3d.ipynb  voronoi-2d.ipynb  voronoi-3d.ipynb  voronoi.ipynb
grampy/: CMakeLists.txt  grampy.cpp
src/: CMakeLists.txt  disable_warnings.hpp  enable_warnings.hpp  geogram_ext.cpp  grampy_ext.cpp
src/geogram/: __init__.py
src/grampy/: __init__.py
tests/: power_diagram_3d.py  test_power_diagram_3d.py  test_voronoi.py
