[build-system]
# https://github.com/scikit-build/scikit-build-core/issues/1234
requires = ["scikit-build-core >=0.10", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "geogram"
version = "0.0.1"
description = "python geogram binding"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Bruno Lévy", email = "bruno.levy@inria.fr" },
    { name = "Cyprien Plateau--Holleville", email = "cyprien.plateau-holleville@inria.fr" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
]

[project.urls]
Homepage = "https://github.com/PlathC/grampy"

[project.optional-dependencies]
test = [
    "numpy",
]

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.13
wheel.py-api = "cp313"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*", "cp314-*"]
archs = ["auto64"]

# Run pytest to ensure that the package was correctly built
before-test = "pip install .[test]"
test-command = "pytest {project}/tests"
test-requires = "pytest"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.15"

